welcome.lessons.welcome.methods.args.MethodsArgs.scala.code

def move(nbPas:Int, versLAvant:Boolean): move = {
  if (versLAvant) {
    avance(nbPas)
  }; else {
    recule(nbPas)
  }
}
